Bug 1037027 - [Lockscreen] notifications can overlap the date on the lockscreen

--- a/apps/system/style/notifications/notifications.css
+++ b/apps/system/style/notifications/notifications.css
@@ -193,7 +193,7 @@
 #notifications-lockscreen-container {
   z-index: 1;
   position: absolute;
-  top: 17.2rem;
+  top: 18.2rem;
   left: 0;
   width: 100%;
   max-height: calc(100% - 29.8rem);
